--- a/uni_data/templates/uni_data/dashboard.html
+++ b/uni_data/templates/uni_data/dashboard.html
@@ -15,7 +15,7 @@
                 Upload a previous
             </button>
             <button type="button" class="btn btn-sm btn-outline-secondary"
-                onclick="location.href='{% url 'upload' %}';">
+                onclick="location.href='{% url 'search_page' %}';">
                 Search previouses
             </button>
         </div>
