Now the objects in the S3 bucket are deleted along with the DB record. Minor refactoring and fixes also.
Signed-off-by: Anthony <ajs34@mail.aub.edu>

--- a/uni_data/templates/uni_data/dashboard.html
+++ b/uni_data/templates/uni_data/dashboard.html
@@ -29,7 +29,7 @@
                     <h1 class="h2">Popular Courses</h1>
                     <div class="btn-toolbar mb-2 mb-md-0">
                         <div class="btn-group mr-2">
-                            <button class="btn btn-sm btn-outline-secondary">See all courses</button>
+                            <!--button class="btn btn-sm btn-outline-secondary">See all courses</button-->
                         </div>
                     </div>
                 </div>
@@ -59,7 +59,7 @@
                     <h1 class="h2">Latest Previouses Submitted</h1>
                     <div class="btn-toolbar mb-2 mb-md-0">
                         <div class="btn-group mr-2">
-                            <button class="btn btn-sm btn-outline-secondary">See all courses</button>
+                            <!--button class="btn btn-sm btn-outline-secondary">See all courses</button-->
                         </div>
                     </div>
                 </div>
