--- a/templates/base.html
+++ b/templates/base.html
@@ -4,8 +4,6 @@
     {% load static %}
     <meta charset="UTF-8">
     <title>UniKnowHub</title>
-    <!-- JavaScript Bundle with Popper -->
-    <!-- CSS only -->
     <link href="{% static 'favicon.png' %}" rel="icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -33,12 +31,8 @@
 
             <div class="text-end">
                 {% if request.user.is_authenticated %}
-                    <button type="button" class="btn btn-outline-info me-2" style="width:300px"
-                            onMouseOver="this.innerHTML='{{ user.credits }} credits left'"
-                            onMouseOut="this.innerHTML='{{ user.email }}'">
-                        {{ user.email }}
-                    </button>
-                    <button type="button" class="btn btn-primary me-2">Settings</button>
+                    <button type="button" class="btn btn-outline-info me-2">My Submissions</button>
+                    <button type="button" class="btn btn-primary me-2" onclick="location.href='{% url 'profile' %}';">Settings</button>
                     <button type="button" class="btn btn-danger" onclick="location.href='{% url 'man_logout' %}';">
                         Logout
                     </button>
