--- a/uni_data/templates/uni_data/dashboard.html
+++ b/uni_data/templates/uni_data/dashboard.html
@@ -36,7 +36,7 @@
                 <table class="table table-striped table-sm">
                     <thead>
                     <tr>
-                        <th>#</th>
+                        <th>Course</th>
                         <th>Title</th>
                         <th>Previouses count</th>
                     </tr>
