--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,9 @@
 
             <div class="text-end">
                 {% if request.user.is_authenticated %}
-                    <button type="button" class="btn btn-outline-info me-2">My Submissions</button>
+                    <button type="button" class="btn btn-outline-info me-2"
+                            onclick="location.href='{% url 'my_submissions' %}';">My Submissions
+                    </button>
                     <button type="button" class="btn btn-primary me-2" onclick="location.href='{% url 'profile' %}';">Settings</button>
                     <button type="button" class="btn btn-danger" onclick="location.href='{% url 'man_logout' %}';">
                         Logout
@@ -47,10 +49,10 @@
 </header>
 <div class="container pb-3">
     {% for m in messages %}
-    <div class="alert {{ m.tags }} alert-dismissible fade show" role="alert">
-        {{ m }}
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-    </div>
+        <div class="alert {{ m.tags }} alert-dismissible fade show" role="alert">
+            {{ m }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
     {% endfor %}
 </div>
 <div class="container pb-3">
